2009-07-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* gtk-gui/objects.xml:
	* MonoDevelop.Projects.Gui.csproj:
	* MonoDevelop.Projects.Gui/ProjectFileEntry.cs: Add a simple
	  widget for picking a file from a project.

2009-07-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Projects.Gui.csproj:
	* MonoDevelop.Projects.Gui.Dialogs/ProjectFileSelectorDialog.cs:
	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.ProjectFileSelectorDialog.cs:
	  Move AspNetFileSelector to
	  MonoDevelop.Project.Gui.Dialogs.ProjectFileSelectorDialog.

2009-07-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/ProjectOptionsDialog.cs:
	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/GeneralProjectOptions.cs:
	  When changing the name of a project, rename the project
	  file.

	* gtk-gui/objects.xml: Flush.

2009-07-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/StartupOptionsPanel.cs:
	  Add missing collection length check. Fixes bug #513867 -
	  ArgumentOutOfRangeException when closing solution properties
	  dialog.

2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindowManager.cs:
	  Fixed sizing bug.

2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionWindowManager.cs:
	  Worked on code completion.

2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionWindowManager.cs:
	  Completion window now hides instead of displaying a message,
	  when no match is found.

2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: